--- a/contact.css
+++ b/contact.css
@@ -1,8 +1,8 @@
 .contact-section{
 
-    background-image: url(contacts.jpg);
+    background-image: url(images/contacts.jpg);
     width: cm;
-    height: 25cm;
+    height: 100vh;
     display: flex;
     gap: 1cm;
     justify-content: center;
@@ -13,6 +13,7 @@
 
 p{
     color: white;
+    font-size: 15px;
 }
 
 body{
@@ -21,13 +22,14 @@ body{
 
 .Kitisuru{
     /* border:1px solid white; */
-    border: solid 2px white;
+    border: solid 1px white;
     width:10cm ;
     height: 9cm;
     padding-left: 1cm;
     font-size: 20px;
     font-weight: 700;
-    margin-top: 10%;
+    margin-top: 19.5rem;
+    margin-bottom: 100px;
     
     
 
@@ -35,15 +37,15 @@ body{
 }
 
 h1{
-    color: blue;
+    color:white;
 }
 
 
 .Kilimani{
     /* border:1px solid white; */
-    border: solid 2px white;
+    border: solid 1px white;
     width:10cm ;
-    height: 9cm;
+    height: 10cm;
     padding-left: 1cm;
     font-size: 20px;
     font-weight: 700;
@@ -56,4 +58,7 @@ h1{
     /* color: black; */
     text-decoration: none;
     color: white;
+}
+body{
+    margin: 0;
 }
