--- a/events.css
+++ b/events.css
@@ -1,7 +1,7 @@
 .events-container{
 display: flex;
 justify-content: center;
-position: relative;
+position:absolute;
 
 }
 
@@ -35,10 +35,11 @@ position: relative;
 .events-page img{
 
     height: 1000px;
-    width:600px ;
+    width:700px ;
 }
 body{
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
+    margin: 0;
 }
 p{
     font-size: 100%;
