--- a/contact.css
+++ b/contact.css
@@ -30,6 +30,7 @@ body{
     font-weight: 700;
     margin-top: 19.5rem;
     margin-bottom: 100px;
+    margin-left: -10%;
     
     
 
@@ -50,6 +51,7 @@ h1{
     font-size: 20px;
     font-weight: 700;
     margin-top: 17%;
+    margin-right: -60%;
     
 
 
@@ -62,3 +64,37 @@ h1{
 body{
     margin: 0;
 }
+
+
+nav ul{
+    display: flex;
+    position: fixed;
+    gap: 1cm;
+    border: 1px solid black;
+    list-style: none;
+    background-color: black;
+    color: aliceblue;
+    width: 48%;
+    border-radius: 40px;
+    padding: 2%;
+    justify-content: center;
+    margin-top: 22cm;
+    margin-left: -17cm;
+    
+}
+
+nav a{
+list-style: none;
+text-decoration: none;
+color: aliceblue;
+margin-top: 10%;
+}
+.navigationbar{
+    margin-top: -5cm;
+    margin-left: 30%;
+    padding: 2px;
+    margin-bottom:30% ;
+    padding: 10%;
+    
+}
+
