--- a/menu.css
+++ b/menu.css
@@ -1,14 +1,4 @@
 
-
-/* 
-.kitisuru-branch{
-
-    background-image:url(images/frontview.jpg);
-    background-repeat: no-repeat;
-    text-align: center;
-    word-spacing: 2px;
-    
-    } */
     
     .kilimani-branch{
     
@@ -43,11 +33,11 @@
     .logo{
     position: absolute;
     overflow: visible;
-    /* margin-top: 6cm; */
     margin-left: 19cm;
     padding: 20px;
     padding-top: 21px;
     }
+
     #img-links{
         text-decoration: none;
         position: relative;
@@ -56,28 +46,180 @@
     }
     
     .kitisuru-branch{
-        /* background-image:url(images/shawl.jpg); */
-        /* background-position: center; */
         background-size: cover;
         width: 1000px;
         height: 1000px;
         text-align: center;
         word-spacing: 2px;
         background-repeat: no-repeat;
-        /* background-image:url(images/frontview.jpg) ; */
     background-image: url(images/frontview.jpg);
     }
     
     .branches{
         display: flex;
     }
-    
-    .navigationbar{
-        color:aliceblue;
-    }
-    nav ul{
-        color: aliceblue;
-    }
+
     body{
         overflow-x: hidden;
+        margin: 0;
+        overflow-y: hidden;
     }
+
+
+    nav ul{
+        display: flex;
+        position: fixed;
+        gap: 1cm;
+        border: 1px solid black;
+        list-style: none;
+        background-color: black;
+        color: aliceblue;
+        width: 48%;
+        border-radius: 40px;
+        padding: 2%;
+        justify-content: center;
+        margin-top: -5cm;
+        margin-left: 12cm;
+       
+    }
+    
+    nav a{
+    list-style: none;
+    text-decoration: none;
+    color: aliceblue;
+    margin-top: 5cm;
+    }
+    .navigationbar{
+        margin-top: -5cm;
+        margin-left: -10%;
+        padding: 2px;
+        margin-bottom:30% ;
+        padding: 10%;
+        
+    }
+    
+    
+    
+    
+
+
+@media only screen and (max-width:600px){
+    
+
+    
+    .kilimani-branch{
+    
+        background-image:url(images/nightview.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 1000px;
+        text-align: center;
+        width: 1000px;
+    
+    }
+    
+    
+    .branches{
+        display: block;
+        justify-content: center;
+        flex-wrap: wrap;
+        
+    }
+    
+    
+    h1{
+        color: white;
+        margin-top:5cm;
+    }
+    
+    h2{
+        color: orangered;
+        position: relative;
+        top:170px;
+        
+    }
+    .logo{
+    position: absolute;
+    overflow: visible;
+    margin-left: -0.4cm;
+    padding: 20px;
+    padding-top: 21px;
+
+    }
+
+    #img-links{
+        text-decoration: none;
+        position: relative;
+        color: white;
+        bottom: 10px;
+    }
+    
+    .kitisuru-branch{
+        background-size: cover;
+        width: 1000px;
+        height: 1000px;
+        text-align: center;
+        word-spacing: 2px;
+        background-repeat: no-repeat;
+    background-image: url(images/frontview.jpg);
+    }
+    
+    .branches{
+        display: flex;
+    }
+
+    body{
+        overflow-x: hidden;
+        margin: 0;
+        overflow-y: hidden;
+    }
+
+
+    nav ul{
+        display: block;
+        position: fixed;
+        gap: 1cm;
+        border: 1px solid black;
+        list-style: none;
+        background-color: black;
+        color: aliceblue;
+        width: -6%;
+        border-radius: 40px;
+        padding: 2%;
+        justify-content: center;
+        margin-top: -5cm;
+        margin-left: 28%;
+        margin-right: 10%;
+       
+    }
+    
+    nav a{
+    list-style: none;
+    text-decoration: none;
+    color: aliceblue;
+    margin-top: 5cm;
+    
+    }
+    .navigationbar{
+        margin-top: -5cm;
+        margin-left: -10%;
+        padding: 20px;
+        margin-bottom:20% ;
+      
+        
+    }
+    
+    
+    #bullimage{
+        width: 45%;
+        margin-left: 26%;
+    }
+  
+    
+    
+
+
+
+
+
+}
