--- a/meals.css
+++ b/meals.css
@@ -4,7 +4,7 @@ background-image: url(images/shawl.jpg);
 /* display: flex; */
 background-repeat: no-repeat;
 height: 55vw;
-width: 50vw;
+width: 100vw;
 /* background-position: center; */
 background-size: cover;
 color: aliceblue;
@@ -84,7 +84,7 @@ p{
 .diversityfood{
     background-color: black;
     color: aliceblue;
-    width: 50vw;
+    width: 100vw;
     height: 55vw;
     overflow: auto;
     /* position: fixed; */
@@ -162,4 +162,37 @@ h2{
 
     display: flex;
     gap: 15cm;
+}
+
+
+nav ul{
+    display: flex;
+    position: fixed;
+    gap: 1cm;
+    border: 1px solid black;
+    list-style: none;
+    background-color:black;
+    color: aliceblue;
+    width: 48%;
+    border-radius: 40px;
+    padding: 2%;
+    justify-content: center;
+    margin-top: 17cm;
+    margin-left: -78cm;
+    
+}
+
+nav a{
+list-style: none;
+text-decoration: none;
+color: aliceblue;
+margin-top: 10%;
+}
+.navigationbar{
+    margin-top: -5cm;
+    margin-left: 30%;
+    padding: 2px;
+    margin-bottom:30% ;
+    padding: 10%;
+    
 }
