--- a/reservation.css
+++ b/reservation.css
@@ -2,14 +2,14 @@
     display: flex;
     background-color: black;
     color: aliceblue;
-    height: 25cm;
+    height: 100vh;
 
 
 }
 
 #opentext_img{
     width: 22cm;
-    height: 25cm;
+    height: 100vh;
 }
 
 
@@ -31,13 +31,14 @@ h1{
     border: solid 0.9px;
     color: white;
     border-radius: 40px;
-    padding: 60px;
+    padding: 19px;
     margin-left: 30px;
-    width: 40%;
+    width: 44%;
     height: 80%;
     margin-top: 20px;
     color: white;
     margin-right: 8px;
+    
 }
 body{
     overflow-x: hidden;
@@ -54,4 +55,42 @@ body{
     width: 20cm;
     height:  1.3cm;
     margin-right: 10%;
+}
+
+body{
+    margin: 0;
+}
+
+
+
+nav ul{
+    display: flex;
+    position: fixed;
+    gap: 1cm;
+    border: 1px solid black;
+    list-style: none;
+    background-color: black;
+    color: aliceblue;
+    width: 48%;
+    border-radius: 40px;
+    padding: 2%;
+    justify-content: center;
+    margin-top: -3cm;
+    margin-left: -10cm;
+    
+}
+
+nav a{
+list-style: none;
+text-decoration: none;
+color: aliceblue;
+margin-top: 10%;
+}
+.navigationbar{
+    margin-top: -5cm;
+    margin-left: 30%;
+    padding: 2px;
+    margin-bottom:30% ;
+    padding: 10%;
+    
 }
