--- a/reviews.css
+++ b/reviews.css
@@ -86,3 +86,35 @@ body{
     /* margin: 0%; */
 }
 
+
+nav ul{
+    display: flex;
+    position: fixed;
+    gap: 1cm;
+    border: 1px solid black;
+    list-style: none;
+    background-color: black;
+    color: aliceblue;
+    width: 48%;
+    border-radius: 40px;
+    padding: 2%;
+    justify-content: center;
+    margin-top: 25cm;
+    margin-left: 20%;
+    
+}
+
+nav a{
+list-style: none;
+text-decoration: none;
+color: aliceblue;
+margin-top: 10%;
+}
+.navigationbar{
+    margin-top: -5cm;
+    margin-left: 30%;
+    padding: 2px;
+    margin-bottom:30% ;
+    padding: 10%;
+    
+}
