--- a/events.css
+++ b/events.css
@@ -78,3 +78,106 @@ margin-top: 10%;
     padding: 10%;
     
 }
+
+
+
+@media only screen and (max-width:600px){
+
+
+    .events-container{
+        display: block;
+        justify-content: center;
+        position:absolute;
+        
+        }
+        
+        .text{
+        
+            position: absolute;
+            /* top: 50%; */
+            /* left: 50%; */
+            /* transform: translate(-50% ,-50%); */
+            color: white;
+            font-size: 15px;
+            /* padding: 12px 20px; */
+            /* justify-content: center; */
+            text-align: center;
+            margin-top: -19cm;
+            margin-left: 1cm;
+        }
+        .texts{
+            color: aliceblue;
+            margin-left: 2cm;
+            text-align: center;
+            margin-top: -19cm;
+            font-size: 15px;
+            position: absolute;
+        }
+        .textss{
+            margin-top: -19cm;
+            color: aliceblue;
+            font-size: 15px;
+            margin-left: 2cm;
+            text-align: center;
+            position: absolute;
+        }
+        
+        .events-page img{
+        
+            height: 130vh;
+            width:100% ;
+        }
+        body{
+            /* overflow-x: hidden; */
+            margin: 0;
+            overflow-y: hidden;
+        }
+        p{
+            font-size: 100%;
+        }
+        
+        
+        nav ul{
+            display: flex;
+            position: fixed;
+            gap: 0.5cm;
+            border: 1px solid black;
+            list-style: none;
+            background-color: black;
+            color: aliceblue;
+            width: 48%;
+            border-radius: 40px;
+            padding: 2%;
+            justify-content: center;
+            margin-top: 21cm;
+            margin-left: -4cm;
+            padding-right: 30%;
+            padding-left: 20%;
+            
+        }
+        
+        nav a{
+        list-style: none;
+        text-decoration: none;
+        color: aliceblue;
+        margin-top: 10%;
+        font-size: 10px;
+        }
+        .navigationbar{
+            margin-top: -5cm;
+            margin-left: 30%;
+            padding: 2px;
+            margin-bottom:30% ;
+            padding: 10%;
+            
+        }
+
+
+
+
+
+
+
+
+
+}
