--- a/live.css
+++ b/live.css
@@ -67,9 +67,11 @@ margin-left: 20%;
 .fadhi-artist{
     background-image:url("images/fadhilee.jpg") ;
     background-size: cover;
-    height: 200vh;
+    height: 100vh;
+    width: 100%;
+    background-position: center;
 
-    position: relative;
+    position: absolute;
 
 }
 
@@ -79,7 +81,7 @@ margin-left: 20%;
     background-size: cover;
     height: 200vh;
 
-    position: relative;
+    position: absolute;
 
 }
 
@@ -185,28 +187,33 @@ margin-top: 5cm;
     #ankolelogo{
     
         width: 6cm;
-        margin-bottom: 20%;
-        margin-top: 12%;
+        margin-bottom: 10%;
+        margin-top: 40%;
+        /* margin-right: 20%; */
+        margin-left: -10%;
     
     }
     
     h1{
         color: orangered;
-        font-size: 60px;
+        font-size: 40px;
+        margin-top: -14%;
+        margin-left: 15%;
     }
     
     .live-events{
         background-image:url(images/african.jpg);
         display: block;
         justify-content: center;
-        height: 230vh;
-        width: 210vw;
+        height: 100vh;
+        width: 105vw;
         background-size: cover;
         position: absolute;
     }
     
     p{
         color: orangered
+        
         
     }
     
@@ -215,26 +222,29 @@ margin-top: 5cm;
     }
     
     h2{
-        color: aliceblue;
-        font-size: 40px;
+        color: black;
+        font-size: 15px;
+        margin-top: -17%;
+        /* margin-right: 40%; */
+        margin-left: 15%;
     }
     
     .fadhille{
     display: flex;
-    gap: 0.9cm;
+    gap: 0.1cm;
     margin-left: 3%;
     
     }
     
     .koko{
         display: flex;
-        gap: 0.9cm;
+        gap: 0.1cm;
         margin-left: 3%;
     }
     
     .shitaqua{
         display: flex;
-        gap: 0.9cm;
+        gap: 0.1cm;
         margin-left: 3%;
     }
     
@@ -270,17 +280,21 @@ margin-top: 5cm;
     }
     
     .fadhille img{
-        width: 280px;
-        gap: 1cm;
+        width: 80px;
+        gap: 0.1cm;
+        margin-top: -70%;
+        /* margin-bottom: -120%; */
     }
     
     
     .koko img {
-        width: 280px;
+        width: 80px;
     }
     
     .shitaqua img {
-        width: 280px;
+        width: 80px;
+        margin-bottom:-5%;
+        margin-top: 85%;
     }
     
     body{
@@ -291,26 +305,27 @@ margin-top: 5cm;
     #artist-fadhile{
         text-decoration: none;
         color:black;
-        font-size: 24.5px;
-        margin-top: 8%;
-        margin-left: -19.4%;
+        font-size: 15px;
+        margin-top: 1%;
+        margin-left: 40%;
         
     }
     
     #artist-koko{
         text-decoration: none;
         color:black;
-        font-size: 24.5px;
-        margin-top: 8%;
-        margin-left: -19.4%;
+        font-size: 15px;
+        margin-top: 1%;
+        margin-left: 40%;
     }
     
     #artist-shitaq{
         text-decoration: none;
         color:black;
-        font-size: 24.5px;
-        margin-top: 8%;
-        margin-left: -19.4%;
+        font-size: 15px;
+        margin-top: 1%;
+        margin-left: 40%;
+        /* margin-bottom: 10; */
     
     }
     
@@ -320,16 +335,16 @@ margin-top: 5cm;
         display: flex;
         position: fixed;
         gap: 1cm;
-        border: 1px solid black;
+        border: 1px solid yellow;
         list-style: none;
-        background-color: black;
+        background-color: yellow;
         color: aliceblue;
-        width: 48%;
+        width: 200px;
         border-radius: 40px;
         padding: 2%;
         justify-content: center;
-        margin-top: 22cm;
-        margin-left: 10cm;
+        margin-top: 10cm;
+        margin-left: 10%;
         
     }
     
@@ -341,10 +356,12 @@ margin-top: 5cm;
     }
     .navigationbar{
         margin-top: -5cm;
-        margin-left: 30%;
+        margin-left: 5%;
         padding: 2px;
         margin-bottom:30% ;
         padding: 10%;
+        width: 100%;
+        font-size: 1px;
        
     }
     
