--- a/reservation.css
+++ b/reservation.css
@@ -94,3 +94,122 @@ margin-top: 10%;
     padding: 10%;
     
 }
+
+
+
+@media only screen and (max-width:600px) {
+
+
+    .reservation{
+        display: block;
+        background-color: black;
+        color: aliceblue;
+        height: 100vh;
+        margin-top: 40px;
+    
+    
+    }
+    
+    #opentext_img{
+        width: 35%;
+        height: 100vh;
+    }
+    
+    
+    p{
+    
+        margin-top: -80%;
+        text-align: center;
+        color: white;
+    }
+    
+    h1{
+        text-align: center;
+        color: orangered;
+    }
+    
+    .reservation-form{
+        display: flex;
+        border: solid 0.9px;
+        color: white;
+        border-radius: 40px;
+        padding: 19px;
+        margin-left: 0px;
+        width: 5%;
+        height: 8%;
+        margin-top: -10px;
+        color: white;
+        margin-right: 0px;
+        position: absolute;
+        margin-top: 5cm;
+        
+    }
+    body{
+        overflow-x: hidden;
+    }
+    #input{
+    
+        width: 8cm;
+        height: 1.3cm;
+        background-color: black;
+        margin-right: 10%;
+        color: white;
+        
+    }
+    .submission{
+        width: 7cm;
+        height:  1.3cm;
+        margin-right: 10%;
+    }
+    
+    body{
+        margin: 0;
+    }
+    
+    
+    
+    nav ul{
+        display: flex;
+        gap: 0.1cm;
+        border: 1px solid black;
+        list-style: none;
+        background-color: black;
+        color: aliceblue;
+        width: 48%;
+        border-radius: 40px;
+        padding: 2%;
+        position: absolute;
+        margin-top: 1cm;
+        margin-left: -10cm;
+        padding-right: 24%;
+       padding-left: 25%;
+        margin-left: -39%;
+        
+    }
+    
+    nav a{
+    list-style: none;
+    text-decoration: none;
+    color: aliceblue;
+    margin-top: 10%;
+    }
+    .navigationbar{
+        margin-top: -5cm;
+        margin-left: 30%;
+        padding: 2px;
+        margin-bottom:30% ;
+        padding: 10%;
+        
+    }
+    
+
+
+
+
+
+
+
+
+
+
+}
