--- a/reviews.css
+++ b/reviews.css
@@ -5,6 +5,8 @@
     display: none; 
     padding: 45px;
     padding-top: 10%;
+    /* margin-top: 40%; */
+    /* margin-bottom: 220px; */
     
   }
   .review:first-child {
@@ -13,21 +15,21 @@
   body{
     margin: 0%;
     margin-bottom: -10%;
-    position: fixed;
+    position: absolute;
     padding-bottom: 0%;
 
   }
   .review{
     h1{
         justify-content: center;
-        display: flex;
+        display: block;
         text-align: center;
         color: white;
         font-family: Arial, Helvetica, sans-serif;
     }
     p{
         justify-content: center;
-        display: flex;
+        display: block;
         text-align: center;
         color: white;
         font-family: Arial, Helvetica, sans-serif;
@@ -39,14 +41,15 @@
     color: orangered;
   }
   #forward{
-   display: flex;
+   display: block;
    justify-content: right;
     color: orangered;
     padding-right: 350px;
   }
   .logo{
-    display: flex;
+    display: block;
     justify-content: center;
+    
 }
 
 .nav-bottom{
