--- a/meals.css
+++ b/meals.css
@@ -1,15 +1,12 @@
 
 .kitisirumenu{
 background-image: url(images/shawl.jpg);
-/* display: flex; */
 background-repeat: no-repeat;
 height: 55vw;
 width: 100vw;
-/* background-position: center; */
 background-size: cover;
 color: aliceblue;
 
-/* position: relative; */
 
 
 }
@@ -37,8 +34,6 @@ h1{
 
 }
 img{
-    /* display: flex; */
-    /* justify-content: center; */
     width: 300px;
     
 }
@@ -47,14 +42,12 @@ img{
 }
 
 .meal-plan{
-    display: flex;
-    /* overflow: auto; */
-    position: fixed;
+    display: flex;position: fixed;
 }
 .type-food{
     display: flex;
-    /* gap: 8cm; */
-    /* justify-content: right; */
+
+   
     gap: 2.5cm;
     padding-left: 50px;
     a{
@@ -87,10 +80,7 @@ p{
     width: 100vw;
     height: 55vw;
     overflow: auto;
-    /* position: fixed; */
-    /* display: flex; */
-    /* position: relative; */
-    /* justify-content: center; */
+    
 }
 
 .meal-type{
@@ -106,8 +96,7 @@ h2{
 .breakfast{
     margin-top: 10%;
     margin-left: 10%;
-    /* text-align: center;
-    justify-content: center; */
+   
 
     
     
@@ -154,7 +143,7 @@ h2{
 }
 
 .nutritious-drink{
-    /* display: flex; */
+    
     gap: 2cm;
 }
 
@@ -195,4 +184,210 @@ margin-top: 10%;
     margin-bottom:30% ;
     padding: 10%;
     
+}
+
+
+
+
+@media only screen and (max-width:600px){
+
+
+
+
+    .kitisirumenu{
+        background-image: url(images/shawl.jpg);
+        background-repeat: no-repeat;
+        height: 100vh;
+        width: 100vw;
+        background-size: cover;
+        color: aliceblue;
+        
+        
+        
+        }
+        body{
+            margin: 0%;
+        }
+        
+        .buffet{
+        
+        font-size: 30px;
+        text-align: center;
+        
+        justify-content: center;
+        padding-top: 150px;
+        h3{
+            display: block;
+            justify-content: center;
+            color: gray;
+            font-size: 20px;
+        }
+        h1{
+            display: block;
+            justify-content: center;
+            color: orangered;
+            font-size: 30px;
+        
+        
+        }
+        img{
+            width: 90px;
+            height: 100px;
+            
+        }
+             
+        
+        }
+        
+        .meal-plan{
+            display: flex;
+            position: fixed;
+            height: 100%;
+        }
+        .type-food{
+            display: flex;
+        
+           
+            gap: 2.5cm;
+            padding-left: 50px;
+            a{
+                text-decoration: none;
+                color: coral
+        
+            }
+        }
+        .side-items {
+            display: flex;
+            color:orangered
+        
+            
+        
+            
+        }
+        .breakfast-menu {
+            display: flex;
+            
+            
+        }
+        
+        p{
+            color:white
+        }
+        
+        .diversityfood{
+            background-color: black;
+            color: aliceblue;
+            width: 100vw;
+            height: 55vw;
+            overflow: auto;
+            
+        }
+        
+        .meal-type{
+          color: white;  
+          text-decoration: none;
+            
+        }
+        
+        h2{
+            color: white;
+        }
+        
+        .breakfast{
+            margin-top: 10%;
+            margin-left: 10%;
+           
+        
+            
+            
+        }
+        
+        .side-items ul{
+            display: flex;
+            gap: 3cm;
+        
+        }
+        
+        #ankolelogo{
+            width: 4vw;
+            margin-left: 1cm;
+            margin-bottom: 1cm;
+            margin-top: 1cm;
+        }
+        .ankole-breakfast{
+            display: flex;
+            gap: 4cm;
+        
+        }
+        
+        .food{
+            display: flex;
+            list-style: none;
+            gap: 12cm;
+        }
+        .mealtype ul{
+            list-style: none;
+        }
+        
+        .foodprice ul{
+            list-style: none;
+        }
+        
+        
+        .fresh-juices ul{
+            list-style: none;
+        }
+        
+        .juice-prices ul{
+            list-style: none;
+        }
+        
+        .nutritious-drink{
+            
+            gap: 2cm;
+        }
+        
+        .cocktail{
+        
+            display: flex;
+            gap: 15cm;
+        }
+        
+        
+        nav ul{
+            display: flex;
+            position: fixed;
+            gap: 1cm;
+            border: 1px solid black;
+            list-style: none;
+            background-color:black;
+            color: aliceblue;
+            width: 48%;
+            border-radius: 40px;
+            padding: 2%;
+            justify-content: center;
+            margin-top: 17cm;
+            margin-left: -78cm;
+            
+        }
+        
+        nav a{
+        list-style: none;
+        text-decoration: none;
+        color: aliceblue;
+        margin-top: 10%;
+        }
+        .navigationbar{
+            margin-top: -5cm;
+            margin-left: 30%;
+            padding: 2px;
+            margin-bottom:30% ;
+            padding: 10%;
+            
+        }
+        
+
+
+
+
 }
