--- a/style.css
+++ b/style.css
@@ -115,6 +115,8 @@ margin-top: 10%;
 
     body{
         margin: 0;
+        overflow-x: hidden;
+        overflow-y: hidden;
     }
    
 
@@ -126,7 +128,7 @@ margin-top: 10%;
 
 .image img{
 
-width: 200px;   
+width: 190px;   
 margin-left: 80px;
 margin-top: 210px;
 
