--- a/live.css
+++ b/live.css
@@ -8,7 +8,7 @@
 }
 #ankolelogo{
 
-    width: 6cm;
+    width: 3cm;
     margin-bottom: 20%;
     margin-top: 12%;
 
@@ -186,11 +186,12 @@ margin-top: 5cm;
     }
     #ankolelogo{
     
-        width: 6cm;
+        width: 2cm;
         margin-bottom: 10%;
-        margin-top: 40%;
-        /* margin-right: 20%; */
-        margin-left: -10%;
+        margin-top: 45%;
+        margin-left: 20%;
+        height: 2cm;
+      
     
     }
     
@@ -205,7 +206,7 @@ margin-top: 5cm;
         background-image:url(images/african.jpg);
         display: block;
         justify-content: center;
-        height: 100vh;
+        height: 160vh;
         width: 105vw;
         background-size: cover;
         position: absolute;
@@ -224,8 +225,8 @@ margin-top: 5cm;
     h2{
         color: black;
         font-size: 15px;
-        margin-top: -17%;
-        /* margin-right: 40%; */
+        margin-top: -7%;
+    
         margin-left: 15%;
     }
     
@@ -282,19 +283,20 @@ margin-top: 5cm;
     .fadhille img{
         width: 80px;
         gap: 0.1cm;
-        margin-top: -70%;
+        margin-top: 100%;
         /* margin-bottom: -120%; */
     }
     
     
     .koko img {
         width: 80px;
+        margin-top: 100%;
     }
     
     .shitaqua img {
         width: 80px;
-        margin-bottom:-5%;
-        margin-top: 85%;
+        margin-bottom:100%;
+        margin-top: 100%;
     }
     
     body{
@@ -335,16 +337,17 @@ margin-top: 5cm;
         display: flex;
         position: fixed;
         gap: 1cm;
-        border: 1px solid yellow;
+        border: 1px solid black;
         list-style: none;
-        background-color: yellow;
+        background-color: black;
         color: aliceblue;
         width: 200px;
         border-radius: 40px;
         padding: 2%;
         justify-content: center;
-        margin-top: 10cm;
-        margin-left: 10%;
+        margin-top: 5cm;
+        margin-left: 20%;
+        margin-bottom: 30%;
         
     }
     
@@ -352,16 +355,16 @@ margin-top: 5cm;
     list-style: none;
     text-decoration: none;
     color: aliceblue;
-    margin-top: 5cm;
+    margin-top: 10cm;
     }
     .navigationbar{
         margin-top: -5cm;
         margin-left: 5%;
         padding: 2px;
         margin-bottom:30% ;
-        padding: 10%;
+        padding: 15%;
         width: 100%;
-        font-size: 1px;
+        font-size: 5px;
        
     }
     
