--- a/reviews.css
+++ b/reviews.css
@@ -114,3 +114,142 @@ margin-top: 10%;
     padding: 10%;
     
 }
+
+
+
+@media only screen and (max-width:600px){
+
+
+
+  .review {
+    display: none; 
+    padding: 45px;
+    padding-top: 10%;
+    
+    
+  }
+  .review:first-child {
+    display: block; 
+  }
+  body{
+    margin: 0%;
+    margin-bottom: -10%;
+    position: absolute;
+    padding-bottom: 0%;
+
+  }
+  .review{
+    h1{
+        justify-content: center;
+        display: block;
+        text-align: center;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    p{
+        justify-content: center;
+        display: block;
+        text-align: center;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    
+  }
+  #previous{
+    padding-left: 350px;
+    color: orangered;
+  }
+  #forward{
+   display: block;
+   justify-content: right;
+    color: orangered;
+    padding-right: 350px;
+  }
+  .logo{
+    display: block;
+    justify-content: center;
+    width: 10%;
+    
+}
+
+.nav-bottom{
+    width: 50%;
+    position: absolute;
+    bottom: 0;
+    background-color: black;
+    overflow: hidden;
+    text-align: center;
+    margin-left: 30%;
+    margin-bottom: 30px;
+    border-radius: 30px; 
+    padding-top: 30px;  
+    margin-top: 10px; 
+}
+.nav-bottom a{
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    padding:10px 14px 10px ;
+}
+.reviewpage{
+    background-color: rgb(19, 18, 18);
+    width: 100vw;
+    position: fixed;
+    height: 100vh;
+
+}
+
+nav ul{
+    display: flex;
+    position: fixed;
+    gap: 0.1cm;
+    border: 1px solid black;
+    list-style: none;
+    background-color: black;
+    color: aliceblue;
+    width: 48%;
+    border-radius: 40px;
+    padding: 2%;
+    justify-content: center;
+    margin-top: 25cm;
+    margin-left: 20%;
+    padding-left: 18%;
+    padding-right: 19%;
+    margin-right: 30px;
+    
+}
+
+nav a{
+list-style: none;
+text-decoration: none;
+color: aliceblue;
+margin-top: 10%;
+}
+.navigationbar{
+    margin-top: -5cm;
+    margin-left: 30%;
+    padding: 2px;
+    margin-bottom:30% ;
+    padding: 10%;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
