--- a/events.css
+++ b/events.css
@@ -94,29 +94,26 @@ margin-top: 10%;
         .text{
         
             position: absolute;
-            /* top: 50%; */
-            /* left: 50%; */
-            /* transform: translate(-50% ,-50%); */
+        
             color: white;
             font-size: 15px;
-            /* padding: 12px 20px; */
-            /* justify-content: center; */
             text-align: center;
             margin-top: -19cm;
             margin-left: 1cm;
+            width: 55vh;
         }
         .texts{
             color: aliceblue;
             margin-left: 2cm;
             text-align: center;
             margin-top: -19cm;
-            font-size: 15px;
+            font-size: 8px;
             position: absolute;
         }
         .textss{
             margin-top: -19cm;
             color: aliceblue;
-            font-size: 15px;
+            font-size: 8px;
             margin-left: 2cm;
             text-align: center;
             position: absolute;
@@ -124,13 +121,16 @@ margin-top: 10%;
         
         .events-page img{
         
-            height: 130vh;
-            width:100% ;
+            height:55vh;
+            width:115% ;
+            display: block;
+            gap: 1cm;
         }
         body{
            
             margin: 0;
             overflow-y: hidden;
+            overflow-x: hidden;
         }
         p{
             font-size: 100%;
@@ -145,13 +145,13 @@ margin-top: 10%;
             list-style: none;
             background-color: black;
             color: aliceblue;
-            width: 48%;
+            width: 45%;
             border-radius: 40px;
             padding: 2%;
             justify-content: center;
             margin-top: 21cm;
-            margin-left: -4cm;
-            padding-right: 30%;
+            margin-left: -3.9cm;
+            padding-right: 20%;
             padding-left: 20%;
             
         }
