--- a/style.css
+++ b/style.css
@@ -124,13 +124,15 @@ margin-top: 10%;
 
  .banner-image{
     position: absolute;
+    width: 100px;
 }
 
 .image img{
 
-width: 170px;   
-margin-left: 80px;
-margin-top: 210px;
+width: 150px;   
+margin-left: 100px;
+margin-top: 280px;
+margin-right: 70px;
 
 
 
@@ -141,13 +143,13 @@ margin-top: 210px;
 color: grey;
 margin-bottom: 90px;
 margin-left: 80px;
-font-size: 100px;
+font-size: 40px;
 
 
 }
 .image{
 
-    width: 140vw;
+    width: 440.3px;
     height:180vh;
     justify-content: center;
     text-align: center;
@@ -163,23 +165,28 @@ font-size: 100px;
 .image:nth-child(1){
     background-image: url(images/frontview.jpg);
    animation-delay:0s;
+  
 }
 .image:nth-child(2){
     background-image: url(images/cookingingredients.jpg);
     animation-delay: 4s;
+   
 }
 .image:nth-child(3){
 background-image: url(images/juicefruits.jpg);
 animation-delay: 8s;
 
+
 }
 .image:nth-child(4){
 background-image: url(images/mealsample.jpg);
 animation-delay: 12s;
+
 }
 .image:nth-child(5){
 background-image: url(images/nightview.jpg);
 animation-delay: 16s;
+
 }
 @keyframes anime{
     0%{opacity:0;}
@@ -192,7 +199,7 @@ animation-delay: 16s;
 nav ul{
     display: flex;
     position: absolute;
-    gap: 0.3cm;
+    gap: 0.1cm;
     border: 1px solid black;
     list-style: none;
     background-color: black;
@@ -202,10 +209,10 @@ nav ul{
     padding: 3%;
     justify-content: center;
     margin-top: 25.4cm;
-    margin-left: -77%;
-    padding-right: 20%;
+    margin-left: -85%;
+    padding-right: -5%;
     margin-right: 90px;
-    padding-left: 20%;
+    padding-left: 3%;
   
 }
 
